Fix the viewport on mobile devices

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -6,10 +6,8 @@
 @import "compass/reset"
 
 body
-  width: 970px
   length: 100%
-  margin-right: auto
-  margin-left: auto
+  margin: 0px auto
   font-family: "Gentium Book Basic", serif
 
 .title
